--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/cdk": "^20.1.3",
+    "@angular/cli": "^19.2.15",
     "@angular/common": "^20.1.3",
     "@angular/compiler": "^20.1.3",
     "@angular/core": "^20.1.3",
@@ -25,6 +26,8 @@
     "chart.js": "^4.5.0",
     "express": "^4.18.2",
     "flatpickr": "^4.6.13",
+    "highcharts": "^12.3.0",
+    "highcharts-angular": "^5.1.0",
     "ng-apexcharts": "^1.17.0",
     "rxjs": "~7.8.0",
     "swiper": "^11.2.8",
@@ -33,7 +36,6 @@
   },
   "devDependencies": {
     "@angular/build": "^20.1.3",
-    "@angular/cli": "^20.1.3",
     "@angular/compiler-cli": "^20.1.3",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
